--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/timmalstead-cfa/mssql_server_data#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sequelize": "^6.6.2",
+    "tedious": "^11.0.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.2",
+    "@types/sequelize": "^4.28.9",
     "nodemon": "^2.0.7",
     "typescript": "^4.3.2"
   }
